--- a/code/solution2.ipynb
+++ b/code/solution2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,27 +14,17 @@
     "\n",
     "import re\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import LabelEncoder, OrdinalEncoder\n",
     "from sklearn.model_selection import train_test_split as tts\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression as LinReg   # alias es mio\n",
     "\n",
-    "from sklearn.linear_model import Lasso        # regularizacion L1\n",
-    "from sklearn.linear_model import Ridge        # regularizacion L2\n",
-    "from sklearn.linear_model import ElasticNet   # regularizacion L1+L2\n",
-    "\n",
-    "from sklearn.tree import ExtraTreeRegressor as ETR\n",
-    "from sklearn.ensemble import RandomForestRegressor as RFR  \n",
-    "from sklearn.ensemble import GradientBoostingRegressor as GBR\n",
-    "from sklearn.ensemble import GradientBoostingRegressor as GBR\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error as mse"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,25 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_opeartingsystem (df):\n",
-    "    for index, value in enumerate(df['Operating System']):\n",
-    "        if value == 'macOS':\n",
-    "            df.loc[index, 'Operating System'] = 'Mac OS'\n",
-    "        elif value == 'Android':\n",
-    "            df.loc[index, 'Operating System'] = 'Windows'\n",
+    "for index, value in enumerate(alldata['Operating System']):\n",
+    "    if value == 'macOS':\n",
+    "        alldata.loc[index, 'Operating System'] = 'Mac OS'\n",
+    "    elif value == 'Android':\n",
+    "        alldata.loc[index, 'Operating System'] = 'Windows'\n",
     "\n",
     "    \n",
-    "alldata = alldata.drop('Operating System Version', axis=1)\n",
-    "column_opeartingsystem (alldata)"
+    "alldata = alldata.drop('Operating System Version', axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,12 +350,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alldata = alldata.drop('Manufacturer', axis=1)\n",
+    "alldata = alldata.drop('Model Name', axis=1)\n",
+    "alldata = alldata.drop('Category', axis=1)\n",
+    "alldata = alldata.drop('Operating System', axis=1)\n",
+    "alldata = alldata.drop('GPU', axis=1)\n",
+    "alldata = alldata.drop('Screen', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_test = alldata.tail(325)\n",
     "new_train = alldata.head(977)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_test = new_test.drop('Price', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_test = new_test.dropna(0)"
    ]
   },
   {
@@ -384,26 +404,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# buscando colinealidad\n",
+    "''' \n",
+    "columnas = new_train.columns[:14].tolist()\n",
+    "\n",
+    "# Calcular la matriz de correlación para las columnas seleccionadas\n",
+    "corr_matrix = new_train[columnas + ['Price']].corr()\n",
     "\n",
     "plt.figure(figsize=(15, 10))\n",
-    "\n",
     "sns.set(style='white')\n",
+    "mask = np.triu(np.ones_like(corr_matrix, dtype=bool))\n",
+    "cmap = sns.diverging_palette(0, 10, as_cmap=True)\n",
     "\n",
-    "mask=np.triu(np.ones_like(df.corr(), dtype=bool))\n",
+    "sns.heatmap(corr_matrix,\n",
+    "            mask=mask,\n",
+    "            cmap=cmap,\n",
+    "            center=0,\n",
+    "            square=True,\n",
+    "            annot=True,\n",
+    "            linewidths=0.5,\n",
+    "            cbar_kws={'shrink': 0.5})\n",
     "\n",
-    "cmap=sns.diverging_palette(0, 10, as_cmap=True)\n",
+    "plt.show()\n",
     "\n",
-    "\n",
-    "sns.heatmap(df.corr(),\n",
-    "           mask=mask,\n",
-    "          cmap=cmap,\n",
-    "          center=0,\n",
-    "          square=True,\n",
-    "          annot=True,\n",
-    "          linewidths=0.5,\n",
-    "          cbar_kws={'shrink': 0.5});"
+    "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' \n",
+    "# Reducir caracteristicas\n",
+    "reduc=umap.UMAP(n_components=2).fit_transform(data)\n",
+    "\n",
+    "reduc.shape\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' \n",
+    "# Normalizar\n",
+    "X_norm=StandardScaler().fit_transform(X)  # normalizacion N(0,1)\n",
+    "\n",
+    "linreg=LinReg().fit(X_norm, y)\n",
+    "\n",
+    "dict(zip(X.columns, linreg.coef_))\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### LINEAR REGRESSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = new_train.drop('Price', axis=1)  # Elimina la columna 'Price' del DataFrame de entrenamiento para obtener las características de entrenamiento\n",
+    "y_train = new_train['Price']  # Obtiene la columna 'Price' como las etiquetas de entrenamiento\n",
+    "X_test = new_test  # Usa el DataFrame de prueba completo como características de prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y_test = new_test['Price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse = mse(y_train,y_pred)\n",
+    "print(\"Error cuadrático medio:\", mse)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
