--- a/code/solution2.ipynb
+++ b/code/solution2.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error as mse\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
   },
@@ -342,10 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_getdummies = pd.get_dummies(alldata[\"Category\"])\n",
-    "gpu_getdummies = pd.get_dummies(alldata[\"GPU\"])\n",
-    "operatingsystem_getdummies = pd.get_dummies(alldata[\"Operating System\"])\n",
-    "alldata = pd.concat([alldata, category_getdummies,operatingsystem_getdummies,gpu_getdummies ], axis=1)"
+    "# alldata['GPU'] = alldata['GPU'].str.split().str[0]"
    ]
   },
   {
@@ -354,12 +351,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alldata = alldata.drop('Manufacturer', axis=1)\n",
-    "alldata = alldata.drop('Model Name', axis=1)\n",
-    "alldata = alldata.drop('Category', axis=1)\n",
-    "alldata = alldata.drop('Operating System', axis=1)\n",
-    "alldata = alldata.drop('GPU', axis=1)\n",
-    "alldata = alldata.drop('Screen', axis=1)"
+    "category_getdummies = pd.get_dummies(alldata[\"Category\"])\n",
+    "gpu_getdummies = pd.get_dummies(alldata[\"GPU\"])\n",
+    "operatingsystem_getdummies = pd.get_dummies(alldata[\"Operating System\"])\n",
+    "screen_getdummies = pd.get_dummies(alldata[\"Screen\"])\n",
+    "alldata = pd.concat([alldata, category_getdummies,operatingsystem_getdummies,gpu_getdummies,screen_getdummies ], axis=1)"
    ]
   },
   {
@@ -368,26 +364,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "alldata = alldata.drop('Manufacturer', axis=1)\n",
+    "alldata = alldata.drop('Model Name', axis=1)\n",
+    "alldata = alldata.drop('Category', axis=1)\n",
+    "alldata = alldata.drop('Operating System', axis=1)\n",
+    "alldata = alldata.drop('GPU', axis=1)\n",
+    "alldata = alldata.drop('Screen', axis=1)\n",
+    "alldata = alldata.drop('Touchscreen', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "new_test = alldata.tail(325)\n",
     "new_train = alldata.head(977)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# new_test = new_test.drop('Price', axis=1)"
+    "#### CALCULATE MEAN SQUARED ERROR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_test = new_test.dropna(0)"
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "\n",
+    "# Dividir los datos en características (X) y etiquetas (y)\n",
+    "X = new_train.drop('Price', axis=1) \n",
+    "y = new_train['Price']\n",
+    "\n",
+    "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = tts(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Calcular MSE para cada modelo\n",
+    "linear_model = LinearRegression()\n",
+    "linear_model.fit(X_train, y_train)\n",
+    "linear_pred = linear_model.predict(X_test)\n",
+    "linear_mse = mean_squared_error(y_test, linear_pred)\n",
+    "\n",
+    "\n",
+    "tree_model = DecisionTreeRegressor()\n",
+    "tree_model.fit(X_train, y_train)\n",
+    "tree_pred = tree_model.predict(X_test)\n",
+    "tree_mse = mean_squared_error(y_test, tree_pred)\n",
+    "\n",
+    "\n",
+    "forest_model = RandomForestRegressor()\n",
+    "forest_model.fit(X_train, y_train)\n",
+    "forest_pred = forest_model.predict(X_test)\n",
+    "forest_mse = mean_squared_error(y_test, forest_pred)"
    ]
   },
   {
@@ -395,70 +432,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SEGUNDA PARTE"
+    "#### CALCULATE R2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' \n",
-    "columnas = new_train.columns[:14].tolist()\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
-    "# Calcular la matriz de correlación para las columnas seleccionadas\n",
-    "corr_matrix = new_train[columnas + ['Price']].corr()\n",
+    "# Calcular r cuadrado para cada modelo\n",
     "\n",
-    "plt.figure(figsize=(15, 10))\n",
-    "sns.set(style='white')\n",
-    "mask = np.triu(np.ones_like(corr_matrix, dtype=bool))\n",
-    "cmap = sns.diverging_palette(0, 10, as_cmap=True)\n",
+    "linear_r2 = r2_score(y_test, linear_pred)\n",
     "\n",
-    "sns.heatmap(corr_matrix,\n",
-    "            mask=mask,\n",
-    "            cmap=cmap,\n",
-    "            center=0,\n",
-    "            square=True,\n",
-    "            annot=True,\n",
-    "            linewidths=0.5,\n",
-    "            cbar_kws={'shrink': 0.5})\n",
+    "tree_r2 = r2_score(y_test, tree_pred)\n",
     "\n",
-    "plt.show()\n",
-    "\n",
-    "'''"
+    "forest_r2 = r2_score(y_test, forest_pred)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression: MSE-> 3.744243053297543e+28   R cuadrado-> -1035602586067962.6\n",
+      "Decision Tree:     MSE-> 13731644594799.889       R cuadrado-> 0.6202028967960036\n",
+      "Random Forest:     MSE-> 7754525844839.503        R cuadrado-> 0.785521214719912\n"
+     ]
+    }
+   ],
    "source": [
-    "''' \n",
-    "# Reducir caracteristicas\n",
-    "reduc=umap.UMAP(n_components=2).fit_transform(data)\n",
-    "\n",
-    "reduc.shape\n",
-    "\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "''' \n",
-    "# Normalizar\n",
-    "X_norm=StandardScaler().fit_transform(X)  # normalizacion N(0,1)\n",
-    "\n",
-    "linreg=LinReg().fit(X_norm, y)\n",
-    "\n",
-    "dict(zip(X.columns, linreg.coef_))\n",
-    "\n",
-    "'''"
+    "print('Linear Regression: MSE->',linear_mse,'  R cuadrado->',linear_r2)\n",
+    "print('Decision Tree:     MSE->',tree_mse,'      R cuadrado->',tree_r2)\n",
+    "print('Random Forest:     MSE->',forest_mse,'       R cuadrado->',forest_r2)"
    ]
   },
   {
@@ -466,70 +478,359 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### LINEAR REGRESSION"
+    "I will use the Random Forest Model."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\631959807.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new_test.fillna(0, inplace = True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_test.fillna(0, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = new_train.drop('Price', axis=1)  # Elimina la columna 'Price' del DataFrame de entrenamiento para obtener las características de entrenamiento\n",
-    "y_train = new_train['Price']  # Obtiene la columna 'Price' como las etiquetas de entrenamiento\n",
-    "X_test = new_test  # Usa el DataFrame de prueba completo como características de prueba"
+    "X = new_test.drop(['Price'], axis = 1)\n",
+    "y = new_test['Price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# y_test = new_test['Price']"
+    "prediction_randomforest = forest_model.predict(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\2976393421.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new_test['Price'] = prediction_randomforest\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_test['Price'] = prediction_randomforest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\3778254897.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  new_test['id'] = range (0, len(new_test))\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_test['id'] = range (0, len(new_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)\n",
-    "y_pred = model.predict(X_test)"
+    "solution = new_test[['id', 'Price']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.480052e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.344192e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6.120990e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3.790827e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5.174409e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>320</td>\n",
+       "      <td>1.704289e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>321</td>\n",
+       "      <td>2.812860e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>322</td>\n",
+       "      <td>5.675328e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>323</td>\n",
+       "      <td>3.235726e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>324</td>\n",
+       "      <td>2.723584e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>325 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id         Price\n",
+       "0      0  1.480052e+07\n",
+       "1      1  1.344192e+07\n",
+       "2      2  6.120990e+06\n",
+       "3      3  3.790827e+06\n",
+       "4      4  5.174409e+06\n",
+       "..   ...           ...\n",
+       "320  320  1.704289e+07\n",
+       "321  321  2.812860e+06\n",
+       "322  322  5.675328e+06\n",
+       "323  323  3.235726e+06\n",
+       "324  324  2.723584e+06\n",
+       "\n",
+       "[325 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mse = mse(y_train,y_pred)\n",
-    "print(\"Error cuadrático medio:\", mse)\n"
+    "solution.reset_index(drop = True, inplace = True)\n",
+    "solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\299952750.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  solution['Price'] = solution['Price'].astype(int)\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution['Price'] = solution['Price'].astype(int)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>14800520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13441924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6120990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3790826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5174408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>320</td>\n",
+       "      <td>17042888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>321</td>\n",
+       "      <td>2812859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>322</td>\n",
+       "      <td>5675327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>323</td>\n",
+       "      <td>3235725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>324</th>\n",
+       "      <td>324</td>\n",
+       "      <td>2723584</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>325 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id     Price\n",
+       "0      0  14800520\n",
+       "1      1  13441924\n",
+       "2      2   6120990\n",
+       "3      3   3790826\n",
+       "4      4   5174408\n",
+       "..   ...       ...\n",
+       "320  320  17042888\n",
+       "321  321   2812859\n",
+       "322  322   5675327\n",
+       "323  323   3235725\n",
+       "324  324   2723584\n",
+       "\n",
+       "[325 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution.to_csv('solution.csv', index=False)\n",
+    "solution"
+   ]
   }
  ],
  "metadata": {
