--- a/code/solution2.ipynb
+++ b/code/solution2.ipynb
@@ -48,11 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_touchscreen (df):\n",
-    "    df['Touchscreen'] = df['Screen'].apply(lambda x: 0 if 'Touch' in x else 1)\n",
-    "    df['Touchscreen'] = df['Touchscreen'].astype(int)\n",
-    "\n",
-    "column_touchscreen (alldata)"
+    "alldata['Touchscreen'] = alldata['Screen'].apply(lambda x: 0 if 'Touch' in x else 1)\n",
+    "alldata['Touchscreen'] = alldata['Touchscreen'].astype(int)"
    ]
   },
   {
@@ -61,11 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_screen (df):\n",
-    "    pattern_screen = r'(\\d+x\\d+)'\n",
-    "    df['Screen'] = df['Screen'].str.extract(pattern_screen)\n",
-    "\n",
-    "column_screen (alldata)"
+    "pattern_screen = r'(\\d+x\\d+)'\n",
+    "alldata['Screen'] = df['Screen'].str.extract(pattern_screen)"
    ]
   },
   {
@@ -74,13 +68,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_screensize (df):\n",
-    "    df['Screen Size'].unique()\n",
-    "    df['Screen Size'] = df['Screen Size'].str.replace('\"', '')\n",
-    "    df['Screen Size'] = df['Screen Size'].astype(float)\n",
-    "    df['Screen Size'] = df['Screen Size'].astype(int)\n",
-    "\n",
-    "column_screensize (alldata)"
+    "alldata['Screen Size'].unique()\n",
+    "alldata['Screen Size'] = alldata['Screen Size'].str.replace('\"', '')\n",
+    "alldata['Screen Size'] = alldata['Screen Size'].astype(float)"
    ]
   },
   {
@@ -258,16 +248,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_cpu (df):\n",
-    "    df['Kernels'] = df['CPU'].map(lambda x: specs[x][0])\n",
-    "    df['GHz'] = df['CPU'].map(lambda x: specs[x][1])\n",
-    "    df['Kernels'] = df['Kernels'].astype(int)\n",
-    "    df['GHz'] = df['GHz'].astype(float)\n",
-    "    df = df.drop('CPU', axis=1)\n",
     "\n",
-    "column_cpu (alldata)\n",
-    "alldata = alldata.drop('CPU', axis=1)\n",
-    "alldata['Kernels'] = alldata['Kernels'].astype(int)"
+    "alldata['Kernels'] = alldatadf['CPU'].map(lambda x: specs[x][0])\n",
+    "alldata['GHz'] = alldata['CPU'].map(lambda x: specs[x][1])\n",
+    "alldata['Kernels'] = alldata['Kernels'].astype(int)\n",
+    "alldata['GHz'] = alldata['GHz'].astype(float)\n",
+    "alldata = alldata.drop('CPU', axis=1)\n"
    ]
   },
   {
@@ -276,13 +262,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_ram (df):\n",
-    "    df['RAM'] = df['RAM'].str.replace(r'\\D', '', regex=True)\n",
-    "    df['RAM'] = df['RAM'].astype(int)\n",
-    "    df = train.rename(columns={'RAM': 'RAM(GB)'})\n",
-    "\n",
-    "column_ram (alldata)\n",
-    "alldata['RAM'] = alldata['RAM'].astype(int)"
+    "alldata['RAM'] = alldata['RAM'].str.replace(r'\\D', '', regex=True)\n",
+    "alldata['RAM'] = alldata['RAM'].astype(int)\n",
+    "alldata = train.rename(columns={'RAM': 'RAM(GB)'})"
    ]
   },
   {
@@ -329,11 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def column_weight (df):\n",
-    "    df['Weight'] = df['Weight'].str.replace(r'\\D', '', regex=True)\n",
-    "    df['Weight'] = df['Weight'].astype(float)\n",
-    "\n",
-    "column_weight (alldata)"
+    "alldata['Weight'] = alldata['Weight'].str.replace(r'\\D', '', regex=True)\n",
+    "alldata['Weight'] = alldata['Weight'].astype(float)"
    ]
   },
   {
