--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,38 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alldata['Touchscreen'] = alldata['Screen'].apply(lambda x: 0 if 'Touch' in x else 1)\n",
-    "alldata['Touchscreen'] = alldata['Touchscreen'].astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "pattern_screen = r'(\\d+x\\d+)'\n",
-    "alldata['Screen'] = df['Screen'].str.extract(pattern_screen)"
+    "alldata['Screen'] = alldata['Screen'].str.extract(pattern_screen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alldata['Screen Size'].unique()\n",
-    "alldata['Screen Size'] = alldata['Screen Size'].str.replace('\"', '')\n",
-    "alldata['Screen Size'] = alldata['Screen Size'].astype(float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,12 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "alldata['Kernels'] = alldatadf['CPU'].map(lambda x: specs[x][0])\n",
+    "alldata['Kernels'] = alldata['CPU'].map(lambda x: specs[x][0])\n",
     "alldata['GHz'] = alldata['CPU'].map(lambda x: specs[x][1])\n",
     "alldata['Kernels'] = alldata['Kernels'].astype(int)\n",
     "alldata['GHz'] = alldata['GHz'].astype(float)\n",
@@ -258,40 +236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "alldata['RAM'] = alldata['RAM'].str.replace(r'\\D', '', regex=True)\n",
-    "alldata['RAM'] = alldata['RAM'].astype(int)\n",
-    "alldata = train.rename(columns={'RAM': 'RAM(GB)'})"
+    "alldata['RAM'] = alldata['RAM'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "alldata = alldata.rename(columns={' Storage': 'Storage'})\n",
-    "pattern_storage = r'(\\d+)(TB|GB)'\n",
-    "    \n",
-    "def convert_storage(storage):\n",
-    "    match = re.match(pattern_storage, storage)\n",
-    "    if match:\n",
-    "        size = int(match.group(1))\n",
-    "        unit = match.group(2)\n",
-    "        if unit == 'TB':\n",
-    "            size *= 1024\n",
-    "        return size\n",
-    "    return None\n",
-    "\n",
-    "alldata['Storage'] = alldata['Storage'].apply(convert_storage)"
+    "alldata['Storage'] = alldata['Storage'].str.replace(r'\\D', '', regex=True)\n",
+    "alldata['Storage'] = alldata['Storage'].astype(int)\n",
+    "alldata['Storage'] = alldata['Storage'].replace({1: 1024, 2: 2048})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,39 +284,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alldata['GPU'] = alldata['GPU'].str.split().str[0]"
+    "alldata['GPU'] = alldata['GPU'].str.split().str[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "manufacturer_getdummies = pd.get_dummies(alldata[\"Manufacturer\"])\n",
     "category_getdummies = pd.get_dummies(alldata[\"Category\"])\n",
     "gpu_getdummies = pd.get_dummies(alldata[\"GPU\"])\n",
     "operatingsystem_getdummies = pd.get_dummies(alldata[\"Operating System\"])\n",
-    "screen_getdummies = pd.get_dummies(alldata[\"Screen\"])\n",
-    "alldata = pd.concat([alldata, category_getdummies,operatingsystem_getdummies,gpu_getdummies,screen_getdummies ], axis=1)"
+    "alldata = pd.concat([alldata, manufacturer_getdummies,category_getdummies,gpu_getdummies,operatingsystem_getdummies], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alldata = alldata.drop('Manufacturer', axis=1)\n",
+    "alldata = alldata.drop('Screen', axis=1)\n",
+    "alldata = alldata.drop('Model Name', axis=1)\n",
+    "alldata = alldata.drop('Category', axis=1)\n",
+    "alldata = alldata.drop('Operating System', axis=1)\n",
+    "alldata = alldata.drop('GPU', axis=1)\n",
+    "alldata = alldata.drop('Weight', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alldata['Screen Size'] = alldata['Screen Size'].str.replace('\"', '')\n",
+    "alldata['Screen Size'] = alldata['Screen Size'].astype(float)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Screen Size</th>\n",
+       "      <th>RAM</th>\n",
+       "      <th>Storage</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Kernels</th>\n",
+       "      <th>GHz</th>\n",
+       "      <th>Acer</th>\n",
+       "      <th>Apple</th>\n",
+       "      <th>Asus</th>\n",
+       "      <th>Chuwi</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AMD</th>\n",
+       "      <th>ARM</th>\n",
+       "      <th>Intel</th>\n",
+       "      <th>Nvidia</th>\n",
+       "      <th>Android</th>\n",
+       "      <th>Chrome OS</th>\n",
+       "      <th>Linux</th>\n",
+       "      <th>Mac OS</th>\n",
+       "      <th>No OS</th>\n",
+       "      <th>Windows</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>11912523.48</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>7993374.48</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Screen Size  RAM  Storage        Price  Kernels  GHz  Acer  Apple  Asus  \\\n",
+       "0         13.3  8.0    128.0  11912523.48      2.0  2.3     0      1     0   \n",
+       "1         13.3  8.0    128.0   7993374.48      2.0  1.8     0      1     0   \n",
+       "\n",
+       "   Chuwi  ...  AMD  ARM  Intel  Nvidia  Android  Chrome OS  Linux  Mac OS  \\\n",
+       "0      0  ...    0    0      1       0        0          0      0       1   \n",
+       "1      0  ...    0    0      1       0        0          0      0       1   \n",
+       "\n",
+       "   No OS  Windows  \n",
+       "0      0        0  \n",
+       "1      0        0  \n",
+       "\n",
+       "[2 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "alldata = alldata.drop('Manufacturer', axis=1)\n",
-    "alldata = alldata.drop('Model Name', axis=1)\n",
-    "alldata = alldata.drop('Category', axis=1)\n",
-    "alldata = alldata.drop('Operating System', axis=1)\n",
-    "alldata = alldata.drop('GPU', axis=1)\n",
-    "alldata = alldata.drop('Screen', axis=1)\n",
-    "alldata = alldata.drop('Touchscreen', axis=1)"
+    "alldata.head(2)"
    ]
   },
   {
@@ -440,9 +545,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Regression: MSE-> 3.744243053297543e+28   R cuadrado-> -1035602586067962.6\n",
-      "Decision Tree:     MSE-> 13731644594799.889       R cuadrado-> 0.6202028967960036\n",
-      "Random Forest:     MSE-> 7754525844839.503        R cuadrado-> 0.785521214719912\n"
+      "Linear Regression: MSE-> 11382296681159.389   R cuadrado-> 0.6851824064140223\n",
+      "Decision Tree:     MSE-> 11848163972767.484       R cuadrado-> 0.6722972019792053\n",
+      "Random Forest:     MSE-> 7321012257208.516        R cuadrado-> 0.7975115632644827\n"
      ]
     }
    ],
@@ -469,7 +574,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\631959807.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_13580\\631959807.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -509,7 +614,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\2976393421.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_13580\\2976393421.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -531,7 +636,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\3778254897.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_13580\\3778254897.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -587,27 +692,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1.480052e+07</td>\n",
+       "      <td>1.585615e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1.344192e+07</td>\n",
+       "      <td>1.537968e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>6.120990e+06</td>\n",
+       "      <td>9.201974e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>3.790827e+06</td>\n",
+       "      <td>3.759013e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>5.174409e+06</td>\n",
+       "      <td>5.790524e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -617,27 +722,27 @@
        "    <tr>\n",
        "      <th>320</th>\n",
        "      <td>320</td>\n",
-       "      <td>1.704289e+07</td>\n",
+       "      <td>1.714919e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>321</th>\n",
        "      <td>321</td>\n",
-       "      <td>2.812860e+06</td>\n",
+       "      <td>2.716534e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>322</th>\n",
        "      <td>322</td>\n",
-       "      <td>5.675328e+06</td>\n",
+       "      <td>5.293022e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>323</th>\n",
        "      <td>323</td>\n",
-       "      <td>3.235726e+06</td>\n",
+       "      <td>3.330719e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>324</th>\n",
        "      <td>324</td>\n",
-       "      <td>2.723584e+06</td>\n",
+       "      <td>3.246842e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -646,17 +751,17 @@
       ],
       "text/plain": [
        "      id         Price\n",
-       "0      0  1.480052e+07\n",
-       "1      1  1.344192e+07\n",
-       "2      2  6.120990e+06\n",
-       "3      3  3.790827e+06\n",
-       "4      4  5.174409e+06\n",
+       "0      0  1.585615e+07\n",
+       "1      1  1.537968e+07\n",
+       "2      2  9.201974e+06\n",
+       "3      3  3.759013e+06\n",
+       "4      4  5.790524e+06\n",
        "..   ...           ...\n",
-       "320  320  1.704289e+07\n",
-       "321  321  2.812860e+06\n",
-       "322  322  5.675328e+06\n",
-       "323  323  3.235726e+06\n",
-       "324  324  2.723584e+06\n",
+       "320  320  1.714919e+07\n",
+       "321  321  2.716534e+06\n",
+       "322  322  5.293022e+06\n",
+       "323  323  3.330719e+06\n",
+       "324  324  3.246842e+06\n",
        "\n",
        "[325 rows x 2 columns]"
       ]
@@ -680,7 +785,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_15760\\299952750.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\carlo\\AppData\\Local\\Temp\\ipykernel_13580\\299952750.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -695,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -727,27 +832,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>14800520</td>\n",
+       "      <td>15856145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>13441924</td>\n",
+       "      <td>15379682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>6120990</td>\n",
+       "      <td>9201973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>3790826</td>\n",
+       "      <td>3759012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>5174408</td>\n",
+       "      <td>5790524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -757,27 +862,27 @@
        "    <tr>\n",
        "      <th>320</th>\n",
        "      <td>320</td>\n",
-       "      <td>17042888</td>\n",
+       "      <td>17149191</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>321</th>\n",
        "      <td>321</td>\n",
-       "      <td>2812859</td>\n",
+       "      <td>2716534</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>322</th>\n",
        "      <td>322</td>\n",
-       "      <td>5675327</td>\n",
+       "      <td>5293021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>323</th>\n",
        "      <td>323</td>\n",
-       "      <td>3235725</td>\n",
+       "      <td>3330719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>324</th>\n",
        "      <td>324</td>\n",
-       "      <td>2723584</td>\n",
+       "      <td>3246841</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -786,22 +891,22 @@
       ],
       "text/plain": [
        "      id     Price\n",
-       "0      0  14800520\n",
-       "1      1  13441924\n",
-       "2      2   6120990\n",
-       "3      3   3790826\n",
-       "4      4   5174408\n",
+       "0      0  15856145\n",
+       "1      1  15379682\n",
+       "2      2   9201973\n",
+       "3      3   3759012\n",
+       "4      4   5790524\n",
        "..   ...       ...\n",
-       "320  320  17042888\n",
-       "321  321   2812859\n",
-       "322  322   5675327\n",
-       "323  323   3235725\n",
-       "324  324   2723584\n",
+       "320  320  17149191\n",
+       "321  321   2716534\n",
+       "322  322   5293021\n",
+       "323  323   3330719\n",
+       "324  324   3246841\n",
        "\n",
        "[325 rows x 2 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
